--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,5 @@
 ---
 
-- debug: var=hostvars[engine]
-- debug: var=engine
-# - debug: var=role_path
-# - debug: msg={{ 'srx_' ~  engine ~ '_ui_password'}}
-# - fail:
-
 - name: Install psycop2
   pip:
     name: psycopg2
@@ -19,7 +13,7 @@
 
 # iterate over a previously explicitely defined list of queries or sql scripts
 - include: sql_declarative_mode.yml
-  when: sql_jobs is defined or sql_con_args is defined
+  when: (sql_jobs is defined or sql_con_args is defined) and sql_path is not defined
 
 # If role was given a sql_path argument, iterate over all files under that path.
 - include: sql_path_mode.yml
