--- a/tasks/sql_path_mode.yml
+++ b/tasks/sql_path_mode.yml
@@ -1,4 +1,5 @@
-
 ---
 
-# iterate over paths
+# iterate over fileglob
+- include: "{{sql_engine}}_run_file_query.yml"
+  with_fileglob: "{{sql_path|default(omit)}}"
