--- a/tasks/postgres_run_query.yml
+++ b/tasks/postgres_run_query.yml
@@ -11,16 +11,26 @@
 # This task necessary because data structure is different
 # - debug: var=query
 
+# adjust sql_con_args before query. This is sql engine dependant. This allows
+# args to be passed as role arguments
+# - set_fact:
+#     sql_con: "{{sql_con_args[query[0]['engine'][team]}}"
+
 # run queries
-- name: run postgres query | '{{query[1]['query']}}'
+- name: run postgres query | "{{query[1]['query']}}"
   postgresql_query:
-    user: "{{sql_connection_args['postgres']['user']}}"
-    password: "{{sql_connection_args['postgres']['password']}}"
-    db: "{{sql_connection_args['postgres']['db']}}"
-    host: "{{sql_connection_args['postgres']['host']|default(omit)}}"
+    login_host: "{{sql_con_args['postgres']['host']|default(omit)}}"
+    login_user: "{{sql_con_args['postgres']['user']}}"
+    login_password: "{{sql_con_args['postgres']['password']}}"
+    login_unix_socket: "{{sql_con_args['postgres']['socket']|default(omit)}}"
+    ssl_mode: "{{sql_con_args['postgres']['ssl_mode']|default(omit)}}"
+    ssl_rootcert: "{{sql_con_args['postgres']['ssl_rootcert']|default(omit)}}"
+
+    db: "{{sql_con_args['postgres']['db']}}"
     query: "{{query[1]['query']}}"
     positional_args: "{{query[1]['positional_args']|default(omit)}}"
     named_args: "{{query[1]['named_args']|default(omit)}}"
+
     fact: "{{query['fact']|default(omit)}}"
   delegate_to: localhost
   register: query_results
