fix: delegate only once
Signed-off-by: Félix Archambault <fel.archambault@gmail.com>

--- a/tasks/postgres_run_file_query.yml
+++ b/tasks/postgres_run_file_query.yml
@@ -15,6 +15,7 @@
     query: "{{item}}"
     # named_args: "{{sql_facts|default(omit)}}"
   delegate_to: localhost
+  run_once: True
 
 # log job
 - name: log query result to sql '{{sql_history_logfile}}'
