--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,5 +16,5 @@
   when: (sql_jobs is defined or sql_con_args is defined) and sql_path is not defined
 
 # If role was given a sql_path argument, iterate over all files under that path.
-- include: sql_path_mode.yml
+- include: sql_fileglob_mode.yml
   when: sql_path is defined
