--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,20 +1,16 @@
 ---
 
-- name: Install psycop2
-  pip:
-    name: psycopg2
-
 - name: loading sql sql_history from '{{sql_history_logfile}}'
   set_fact:
     sql_history: "{{lookup('file', sql_history_logfile)}}"
   # ignore errors caused by inexisting file, this might be the case on the
-  # first run
+  # first run ever made
   ignore_errors: True
 
 # iterate over a previously explicitely defined list of queries or sql scripts
-- include: sql_declarative_mode.yml
-  when: (sql_jobs is defined or sql_con_args is defined) and sql_path is not defined
+- include: sql_advanced_mode.yml
+  when: sql_queries is defined and sql_fileglob is not defined
 
 # If role was given a sql_path argument, iterate over all files under that path.
 - include: sql_fileglob_mode.yml
-  when: sql_path is defined
+  when: sql_fileglob is defined
