refactor: make sql_conn_targets variable plurial
Signed-off-by: Félix Archambault <fel.archambault@gmail.com>

--- a/docs/docs.yml
+++ b/docs/docs.yml
@@ -58,6 +58,7 @@ description: |
   # engines for a complex maintenance activity when inpersonating a specific
   # a specific individual/group. It also allows to have even less levels.
 
+  # 3 level example
   app_sql_conn_creds:
     # per user/team then engine creds
     me:
@@ -70,6 +71,7 @@ description: |
         user: teamname
         password: "teampassword"
 
+  # 2 level example
   app_sql_conn_creds:
       postgres:
         user: myuser
@@ -119,7 +121,7 @@ description: |
     - hosts: localhost
 
     - { role: sql-runner,
-        sql_conn_target: "{{app_sql_conn_target['postgres']}}",
+        sql_conn_targets: "{{app_sql_conn_targets['postgres']}}",
         sql_conn_creds: "{{app_sql_conn_creds['me']['postgres']}}",
         sql_engine: postgres,
         sql_db: 'mydb',
