--- a/tasks/postgres_run_sql_script.yml
+++ b/tasks/postgres_run_sql_script.yml
@@ -8,10 +8,10 @@
     login_user: "{{sql_conn_creds['user']}}"
     login_password: "{{sql_conn_creds['password']}}"
     # target
-    login_host: "{{sql_conn_target['host']|default(omit)}}"
-    login_unix_socket: "{{sql_conn_target['unix_socket']|default(omit)}}"
-    ssl_mode: "{{sql_conn_target['ssl_mode']|default(omit)}}"
-    ssl_rootcert: "{{sql_conn_target['ssl_rootcert']|default(omit)}}"
+    login_host: "{{sql_conn_targets['host']|default(omit)}}"
+    login_unix_socket: "{{sql_conn_targets['unix_socket']|default(omit)}}"
+    ssl_mode: "{{sql_conn_targets['ssl_mode']|default(omit)}}"
+    ssl_rootcert: "{{sql_conn_targets['ssl_rootcert']|default(omit)}}"
     # query
     db: "{{sql_db}}"
     query: "{{item}}"
