--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,20 @@
 ---
 
+- name: ensure '{{sql_history_logfile|dirname}}' exists
+  file:
+    path: "{{sql_history_logfile | dirname}}"
+    state: directory
+
+- name: touch '{{sql_history_logfile}}' (ensure it exists)
+  file:
+    path: "{{sql_history_logfile}}"
+    state: touch
+
 - name: loading sql sql_history from '{{sql_history_logfile}}'
   set_fact:
     sql_history: "{{lookup('file', sql_history_logfile)}}"
   # ignore errors caused by inexisting file, this might be the case on the
   # first run ever made
-  ignore_errors: True
 
 # iterate over a previously explicitely defined list of queries or sql scripts
 - include: sql_advanced_mode.yml
