fix: added missing task file for impala to work in advanced mode fix: missing autocommit arg for postgresql_query task files refactor: all *_run_sql_script.yml file include the     log_query_to_sql_hist.yml logging task docs: various comments cleanup in yml files

--- a/tasks/impala_run_sql_script.yml
+++ b/tasks/impala_run_sql_script.yml
@@ -1,8 +1,6 @@
 ---
 
-# Run sql queries on impala database an database and optionaly
-# register results for later use. This is the main entry point to the
-# impala_query module used by this role
+# This task necessary because data structure is different when in fileglob mode
 
 # Requirements:
 #   - impyla
@@ -23,9 +21,4 @@
   delegate_to: localhost
   run_once: True
 
-# log job
-- name: log query result to sql '{{sql_history_logfile}}'
-  lineinfile:
-    create: yes
-    line: "{{item}}"
-    dest: "{{sql_history_logfile}}"
+- include: log_query_to_sql_hist.yml
