--- a/tasks/impala_run_query.yml
+++ b/tasks/impala_run_query.yml
@@ -15,7 +15,7 @@
     ssl_mode: "{{sql_conn_targets['impala']['ssl_mode']|default(omit)}}"
     ssl_rootcert: "{{sql_conn_targets['impala']['ssl_rootcert']|default(omit)}}"
     # query
-    db: "{{query[1]['db']|default(query[0]['db'])}}"
+    db: "{{query[0]['db']|default(sql_db)}}"
     query: "{{query[1]['query']}}"
     positional_args: "{{query[1]['positional_args']|default(omit)}}"
     named_args: "{{query[1]['named_args']|default(omit)}}"
