fix: allow for missing impala password fix: force dynamic task inclusion
Signed-off-by: Félix Archambault <fel.archambault@gmail.com>

--- a/tasks/impala_run_sql_script.yml
+++ b/tasks/impala_run_sql_script.yml
@@ -9,7 +9,7 @@
   impala_query:
     # creds
     login_user: "{{sql_conn_creds['user']}}"
-    login_password: "{{sql_conn_creds['password']}}"
+    login_password: "{{sql_conn_creds['password']|default(omit)}}"
     # target
     login_host: "{{sql_conn_targets['host']|default(omit)}}"
     login_unix_socket: "{{sql_conn_targets['unix_socket']|default(omit)}}"
